- Fixed vectorSum() - Added test for vectorSum()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,4 @@ project(GOST_R_34_11_94)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(GOST_R_34_11_94 main.cpp
-        hash.cpp
-        hash.h
-        test.h
-        Utils.cpp
-        Utils.h
-)
+add_executable(GOST_R_34_11_94 main.cpp Utils.h Utils.cpp hash.h hash.cpp test.h )
